--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -11,6 +11,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: $primary-font;
   overflow-x: hidden;
